# SanBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
backend/: audit_log.py  download_worker.py  downloader.py  javlibrary_service.py  main.py  models.py  preview_worker.py  ranking_worker.py  task_manager.py  tg_mirror.py
bot/: __init__.py  backend_client.py  lang.py  lang_keys.py  llm_client.py  llm_service.py  main.py  message_parser.py  napcat_client.py
config/: actor-aliases.yml.example  javlibrary-option.yml.example  jmcomic-option.yml.example
docs/: env.md  qa.md  tutorial.md
i18n/: zh_CN.json
integrations/: __init__.py
integrations/astrbot/: README.md  __init__.py  compose.yml  config-overlay.example.json  group-chat-plus-config.example.json  plugin-config.example.json
integrations/astrbot/astrbot_plugin_sanbot_router/: __init__.py  _conf_schema.json  main.py  meme_glossary.json  meme_knowledge.py  metadata.yaml  routing.py
integrations/astrbot/personas/: xiaosan.json
javlibrary_crawler/: __init__.py  browser_fetcher.py  cli.py  client.py  errors.py  fetcher.py  models.py  normalizer.py  option.py  parser.py  providers.py
lang/: zh_CN.json
scripts/: install.sh
tests/: test_astrbot_router.py  test_audit_log.py  test_backend_tasks.py  test_bot_flow.py  test_i18n_keys.py  test_installer_assets.py  test_javlibrary_crawler.py  test_llm.py  test_message_parser.py  test_tg_mirror.py
tools/: generate_tg_session.py
