[project]
name = "sanbot"
version = "0.1.0"
description = "SanBot: a NapCatQQ OneBot 11 group bot with JMComic download support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "curl-cffi>=0.7.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "img2pdf>=0.5.1",
  "jmcomic>=2.7.1,<2.8.0",
  "pikepdf>=9.0.0",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
]

[project.scripts]
jav-meta = "javlibrary_crawler.cli:main"
javlibrary = "javlibrary_crawler.cli:main"
javv = "javlibrary_crawler.cli:main"

[project.optional-dependencies]
browser = [
  "playwright>=1.45.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot", "backend", "javlibrary_crawler"]
exclude = ["tests", "config", "data"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
